广告：添加谷歌自动广告代码

--- a/satisfactory.html
+++ b/satisfactory.html
@@ -23,6 +23,8 @@
     <script src="js/officialGameJs/satisfactory/satisfactory.js"></script>
     <script src="./js/officialGameJs/satisfactory/tree-satisfactory.js"></script>
     <script src="./js/officialGameJs/satisfactory/table-satisfactory.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2040100387385862"
+            crossorigin="anonymous"></script>
 </head>
 
 <body>
