--- a/dsp.html
+++ b/dsp.html
@@ -33,6 +33,9 @@
     <script src="js/jquery-3.1.1.min.js"></script>
     <link href="css/plugins/jsTree/style.min.css" rel="stylesheet">
     <script src="js/plugins/jsTree/jstree.min.js"></script>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2040100387385862"
+            crossorigin="anonymous"></script>
 </head>
 
 <body>
