--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
             color: white;
         }
     </style>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2040100387385862"
+            crossorigin="anonymous"></script>
 </head>
 <body>
 <div class="container">
