feat：添加ICP备案号

--- a/index.html
+++ b/index.html
@@ -44,6 +44,21 @@
         .game_name {
             color: white;
         }
+
+        .footer {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            background-color: #f8f9fa; /* 背景颜色可以根据需要调整 */
+            padding: 10px; /* 内边距可以根据需要调整 */
+            text-align: center; /* 文本居中对齐 */
+        }
+
+        .footer a {
+            margin: 0 10px; /* 链接之间的间距 */
+        }
+
     </style>
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2040100387385862"
@@ -55,7 +70,10 @@
     <div class="button-container" id="support_game_list">
     </div>
     <div style="color: white; margin-top: 10px;" id="text_feedback">
-        如果你有建议、反馈、其它想玩的游戏，欢迎联系我：
+        如果你有建议、反馈、其它想玩的游戏，欢迎发送邮件到：formulacalculator@163.com
+    </div>
+    <div class="footer">
+        <a href="https://beian.miit.gov.cn/" target="_blank">粤ICP备2024283143号-2</a>
     </div>
     <script src="./data/index.js"></script>
 </div>
