feat: 增加友盟统计

--- a/satisfactory.html
+++ b/satisfactory.html
@@ -25,6 +25,17 @@
     <script src="./js/officialGameJs/satisfactory/table-satisfactory.js"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2040100387385862"
             crossorigin="anonymous"></script>
+                <!--  友盟统计  -->
+    <script>
+        var _czc = _czc || [];
+        (function () {
+            var um = document.createElement("script");
+            um.src = "https://v1.cnzz.com/z.js?id=1281381569&async=1";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(um, s);
+        })();
+    </script>
+</head>
 </head>
 
 <body>
@@ -134,6 +145,7 @@
                     <div class="ibox" id="calResult">
                         <div class="ibox-title">
                             <h5 id="text_calculate_result">计算结果</h5>
+                            <a style="margin-left: 20px;" href="https://txc.qq.com/products/605145" target="_blank">bug/建议反馈</a>
                         </div>
                         <div class="ibox-content">
                             <div class="row m-t-sm">
