--- a/dsp.html
+++ b/dsp.html
@@ -36,6 +36,17 @@
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2040100387385862"
             crossorigin="anonymous"></script>
+
+    <!--  友盟统计  -->
+    <script>
+        var _czc = _czc || [];
+        (function () {
+            var um = document.createElement("script");
+            um.src = "https://v1.cnzz.com/z.js?id=1281381569&async=1";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(um, s);
+        })();
+    </script>
 </head>
 
 <body>
@@ -295,6 +306,7 @@
             <div class="ibox" id="calResult">
                 <div class="ibox-title">
                     <h5 id="text_calculate_result">计算结果</h5>
+                    <a style="margin-left: 20px;" href="https://txc.qq.com/products/605145" target="_blank">bug/建议反馈</a>
                 </div>
                 <div class="ibox-content">
                     <div class="panel blank-panel">
