--- a/index.html
+++ b/index.html
@@ -63,6 +63,17 @@
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2040100387385862"
             crossorigin="anonymous"></script>
+                <!--  友盟统计  -->
+    <script>
+        var _czc = _czc || [];
+        (function () {
+            var um = document.createElement("script");
+            um.src = "https://v1.cnzz.com/z.js?id=1281381569&async=1";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(um, s);
+        })();
+    </script>
+</head>
 </head>
 <body>
 <div class="container">
