feat: 海外项目不需要现实备案号

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
     <div style="color: white; margin-top: 10px;" id="text_feedback">
         如果你有建议、反馈、其它想玩的游戏，欢迎发送邮件到：formulacalculator@163.com
     </div>
-    <div class="footer">
-        <a href="https://beian.miit.gov.cn/" target="_blank">粤ICP备2024283143号-2</a>
-    </div>
+<!--    <div class="footer">-->
+<!--        <a href="https://beian.miit.gov.cn/" target="_blank">粤ICP备2024283143号-2</a>-->
+<!--    </div>-->
     <script src="./data/index.js"></script>
 </div>
 </body>
