feat：添加ICP备案号

--- a/index.html
+++ b/index.html
@@ -21,15 +21,18 @@
             height: 100vh;
             text-align: center;
         }
+
         .title {
             font-size: 36px;
             margin-bottom: 30px;
             color: white;
         }
+
         .button-container {
             display: flex;
             justify-content: center;
         }
+
         .btn-game {
             margin: 0 10px;
             padding: 10px;
@@ -37,10 +40,12 @@
             cursor: pointer;
             background-color: transparent;
         }
+
         .btn-game img {
             width: 200px;
             height: 200px;
         }
+
         .game_name {
             color: white;
         }
@@ -63,7 +68,7 @@
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2040100387385862"
             crossorigin="anonymous"></script>
-                <!--  友盟统计  -->
+    <!--  友盟统计  -->
     <script>
         var _czc = _czc || [];
         (function () {
@@ -83,9 +88,10 @@
     <div style="color: white; margin-top: 10px;" id="text_feedback">
         如果你有建议、反馈、其它想玩的游戏，欢迎发送邮件到：formulacalculator@163.com
     </div>
-<!--    <div class="footer">-->
-<!--        <a href="https://beian.miit.gov.cn/" target="_blank">粤ICP备2024283143号-2</a>-->
-<!--    </div>-->
+    <!--  TODO: 提交海外版本的时候，都要隐藏掉。  -->
+    <div class="footer">
+        <a href="https://beian.miit.gov.cn/" target="_blank">粤ICP备2024283143号-2</a>
+    </div>
     <script src="./data/index.js"></script>
 </div>
 </body>
