feature：刷新方法说明。默认数据量调整。

--- a/satisfactory.html
+++ b/satisfactory.html
@@ -84,7 +84,9 @@
                 <div class="navbar-header">
                     <a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#">侧边栏</a>
                 </div>
+                <div>asd</div>
                 <ul class="nav navbar-top-links navbar-right">
+                    <li style="color: red; margin-right: 30px;">建议每次打开网页后，使用Ctrl+F5刷新页面，防止缓存导致最新数据未被读取。</li>
                     <li><span class="m-r-sm text-muted welcome-message">幸福工厂-量化计算器</span></li>
                     <li><a href="https://txc.qq.com/products/605145" target="_blank">bug/建议反馈</a></li>
                     <li><a href="index.html" target="_blank">网站首页</a></li>
@@ -113,7 +115,7 @@
 
                                     <label class="font-normal" for="needs_amount" id="text_number"
                                            style="margin-left: 30px;">数量:</label>
-                                    <input type="text" size="6" id="needs_amount" value="4" name="demo1"
+                                    <input type="text" size="6" id="needs_amount" value="5" name="demo1"
                                            style="margin-left: 4px; width: 10%;"/>
                                     <label>个/min</label>
 
