--- a/dsp.html
+++ b/dsp.html
@@ -307,6 +307,7 @@
                 <div class="ibox-title">
                     <h5 id="text_calculate_result">计算结果</h5>
                     <a style="margin-left: 20px;" href="https://txc.qq.com/products/605145" target="_blank">bug/建议反馈</a>
+                    <a href="https://github.com/wenjianQL/GameCalculator" target="_blank" style="margin-left: 20px;">Github仓库</a>
                 </div>
                 <div class="ibox-content">
                     <div class="panel blank-panel">
