--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
     <div style="color: white; margin-top: 10px;" id="text_feedback">
         如果你有建议、反馈、其它想玩的游戏，欢迎发送邮件到：formulacalculator@163.com
     </div>
+    <div style="color: white; margin-top: 10px;">
+        <a href="https://github.com/wenjianQL/GameCalculator" target="_blank">Github仓库</a>
+    </div>
     <!--  TODO: 提交海外版本的时候，都要隐藏掉。  -->
     <div class="footer">
         <a href="https://beian.miit.gov.cn/" target="_blank">粤ICP备2024283143号-2</a>
