--- a/satisfactory.html
+++ b/satisfactory.html
@@ -90,6 +90,7 @@
                     <li><span class="m-r-sm text-muted welcome-message">幸福工厂-量化计算器</span></li>
                     <li><a href="https://txc.qq.com/products/605145" target="_blank">bug/建议反馈</a></li>
                     <li><a href="index.html" target="_blank">网站首页</a></li>
+                    <li><a href="https://github.com/wenjianQL/GameCalculator" target="_blank">Github仓库</a></li>
                 </ul>
             </nav>
         </div>
