[feature]：幸福工厂-加速计算

--- a/satisfactory.html
+++ b/satisfactory.html
@@ -21,6 +21,7 @@
     <script src="js/commonJs/commonJs.js"></script>
     <script src="js/commonJs/commonFun.js"></script>
     <script src="js/officialGameJs/satisfactory/satisfactory.js"></script>
+    <script src="./js/officialGameJs/satisfactory/satisfactory-buff.js"></script>
     <script src="./js/officialGameJs/satisfactory/tree-satisfactory.js"></script>
     <script src="./js/officialGameJs/satisfactory/table-satisfactory.js"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2040100387385862"
