[fix]：修改配方时，多余产物没有删除的，导致进行了累加的问题。

--- a/satisfactory.html
+++ b/satisfactory.html
@@ -236,6 +236,7 @@
                                                     <th id="text_table_devices">所需设备</th>
                                                     <th id="text_table_devices_number">设备数量</th>
                                                     <th id="text_table_recipe">配方</th>
+                                                    <th id="text_table_other">多余产物</th>
                                                     <!--                                                            <th id="text_table_is_calculate">是否计算</th>-->
                                                 </tr>
                                                 </thead>
