[feature]：去掉蓝图入口

--- a/satisfactory.html
+++ b/satisfactory.html
@@ -72,9 +72,9 @@
                 <li class="active"><a href="satisfactory.html" target="_blank"
                                       onclick="_czc.push(['_trackEvent', '页面', '点击', '幸福工厂-量化计算器']);"><span
                         class="nav-label">量化计算器</span></a></li>
-                <li><a href="satisfactory_blue.html" target="_blank"
-                       onclick="_czc.push(['_trackEvent', '页面', '点击', '幸福工厂-蓝图']);"><span
-                        class="nav-label">蓝图</span></a></li>
+<!--                <li><a href="satisfactory_blue.html" target="_blank"-->
+<!--                       onclick="_czc.push(['_trackEvent', '页面', '点击', '幸福工厂-蓝图']);"><span-->
+<!--                        class="nav-label">蓝图</span></a></li>-->
             </ul>
 
         </div>
