[feature]：树形-设备统计

--- a/test.html
+++ b/test.html
@@ -75,22 +75,22 @@
                             </div>
                             <div class="ibox-content" style="display: flex; flex-wrap: wrap;">
                                 <div style="flex: 1;">
-                                    <label id="text_total_material">原材料合计：</label>
+                                    <label>原材料合计：</label>
                                     <ul id="sourceList">
                                     </ul>
                                 </div>
                                 <div style="flex: 1;">
-                                    <label id="text_total_equipment">设备合计：</label>
-                                    <ul id="totalList">
+                                    <label>设备合计：</label>
+                                    <ul id="deviceList">
                                     </ul>
                                 </div>
                                 <div style="flex: 1;">
-                                    <label id="text_total_energy">电量：</label>
+                                    <label>电量：</label>
                                     <ul id="energyList">
                                     </ul>
                                 </div>
                                 <div style="flex: 1;">
-                                    <label id="text_total_product">产物：</label>
+                                    <label>产物：</label>
                                     <ul id="surplusList">
                                     </ul>
                                 </div>
