[feature]：树形-统计电量

--- a/test.html
+++ b/test.html
@@ -86,7 +86,7 @@
                                 </div>
                                 <div style="flex: 1;">
                                     <label>电量：</label>
-                                    <ul id="energyList">
+                                    <ul id="electricityList">
                                     </ul>
                                 </div>
                                 <div style="flex: 1;">
