--- a/satisfactory.html
+++ b/satisfactory.html
@@ -55,15 +55,8 @@
                         <img alt="image" class="w-50 h-50" src="img/logo/SatisFactory.webp"/>
                         <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                             <span class="block m-t-xs font-bold">幸福工厂</span>
-                            <!--                                <b class="caret"></b>-->
                             </span>
                         </a>
-                        <!--                     有版本区分，才进行实现。代码不要删除。   -->
-                        <!--                        <ul class="dropdown-menu animated fadeInRight m-t-xs">-->
-                        <!--                            <li><a class="dropdown-item" href="">游戏版本1</a></li>-->
-                        <!--                            <li><a class="dropdown-item" href="">游戏版本2</a></li>-->
-                        <!--                            <li><a class="dropdown-item" href="">游戏版本3</a></li>-->
-                        <!--                        </ul>-->
                     </div>
                     <div class="logo-element">
                         <img src="img/logo/logo.png" style="width: 80px; height: 80px; scale: max(1,1);" alt="logo">
@@ -72,9 +65,9 @@
                 <li class="active"><a href="satisfactory.html" target="_blank"
                                       onclick="_czc.push(['_trackEvent', '页面', '点击', '幸福工厂-量化计算器']);"><span
                         class="nav-label">量化计算器</span></a></li>
-<!--                <li><a href="satisfactory_blue.html" target="_blank"-->
-<!--                       onclick="_czc.push(['_trackEvent', '页面', '点击', '幸福工厂-蓝图']);"><span-->
-<!--                        class="nav-label">蓝图</span></a></li>-->
+                <li><a href="satisfactory_tree.html" target="_blank"
+                                      onclick="_czc.push(['_trackEvent', '侧拉栏', '点击', '幸福工厂-树形计算']);"><span
+                        class="nav-label">新-树形计算</span></a></li>
             </ul>
 
         </div>
@@ -87,7 +80,9 @@
                 </div>
                 <div>asd</div>
                 <ul class="nav navbar-top-links navbar-right">
-                    <li style="color: red; margin-right: 30px;">建议每次打开网页后，使用Ctrl+F5刷新页面，防止缓存导致最新数据未被读取。</li>
+                    <li style="color: red; margin-right: 30px;">
+                        建议每次打开网页后，使用Ctrl+F5刷新页面，防止缓存导致最新数据未被读取。
+                    </li>
                     <li><span class="m-r-sm text-muted welcome-message">幸福工厂-量化计算器</span></li>
                     <li><a href="https://txc.qq.com/products/605145" target="_blank">bug/建议反馈</a></li>
                     <li><a href="index.html" target="_blank">网站首页</a></li>
@@ -295,6 +290,7 @@
             }
         });
     });
+    _czc.push(['_trackEvent', '页面', '进入', '幸福工厂-量化计算器']);
 </script>
 </body>
 
