[style]：侧拉栏文字调整

--- a/satisfactory_tree.html
+++ b/satisfactory_tree.html
@@ -59,7 +59,7 @@
 
                 <li class="active"><a href="satisfactory_tree.html" target="_blank"
                                       onclick="_czc.push(['_trackEvent', '侧拉栏', '点击', '幸福工厂-树形计算']);"><span
-                        class="nav-label">新-树形计算</span></a></li>
+                        class="nav-label">树形计算</span></a></li>
             </ul>
 
         </div>
