--- a/satisfactory.html
+++ b/satisfactory.html
@@ -67,7 +67,7 @@
                         class="nav-label">量化计算器</span></a></li>
                 <li><a href="satisfactory_tree.html" target="_blank"
                                       onclick="_czc.push(['_trackEvent', '侧拉栏', '点击', '幸福工厂-树形计算']);"><span
-                        class="nav-label">新-树形计算</span></a></li>
+                        class="nav-label">树形计算</span></a></li>
             </ul>
 
         </div>
