--- a/satisfactory.html
+++ b/satisfactory.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>SatisFactory Calculate</title>
+    <title>量化计算器-幸福工厂</title>
     <meta name="author" content="Wind">
 
     <!--通用文件-->
