--- a/satisfactory_tree.html
+++ b/satisfactory_tree.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Test Web</title>
+    <title>树形计算-量化计算器-幸福工厂</title>
 
     <!--通用文件-->
     <link href="css/bootstrap.min.css" rel="stylesheet">
