[feature]：文件结构调整

--- a/satisfactory_tree.html
+++ b/satisfactory_tree.html
@@ -17,13 +17,12 @@
 
 
     <!--  引入js/test/device.js  -->
-    <script src="js/test/data.js"></script>
-    <script src="js/test/device.js"></script>
-    <script src="js/test/recipe.js"></script>
-    <script src="js/test/treeListShow.js"></script>
-    <script src="js/test/goods.js"></script>
-    <script src="js/test/treeTotal.js"></script>
-    <script src="js/test/commonMethod.js"></script>
+    <script src="js/satisfactory/data.js"></script>
+    <script src="js/satisfactory/device.js"></script>
+    <script src="js/satisfactory/recipe.js"></script>
+    <script src="js/satisfactory/tree/treeListShow.js"></script>
+    <script src="js/satisfactory/tree/treeTotal.js"></script>
+    <script src="js/satisfactory/commonMethod.js"></script>
 
     <!--  友盟统计  -->
     <script>
@@ -194,7 +193,7 @@
 <!-- Custom and plugin javascript -->
 <script src="js/inspinia.js"></script>
 <script src="js/plugins/pace/pace.min.js"></script>
-<script src="js/test/treeCalculator.js"></script>
+<script src="js/satisfactory/calculator.js"></script>
 <script>
     _czc.push(['_trackEvent', '页面', '进入', '幸福工厂-树形计算']);
     setNameAndNumber();
