[feature]：拆分计算逻辑，构建base的计算入口。

--- a/satisfactory.html
+++ b/satisfactory.html
@@ -66,8 +66,11 @@
                                       onclick="_czc.push(['_trackEvent', '页面', '点击', '幸福工厂-量化计算器']);"><span
                         class="nav-label">量化计算器</span></a></li>
                 <li><a href="satisfactory_tree.html" target="_blank"
-                                      onclick="_czc.push(['_trackEvent', '侧拉栏', '点击', '幸福工厂-树形计算']);"><span
+                       onclick="_czc.push(['_trackEvent', '侧拉栏', '点击', '幸福工厂-树形计算']);"><span
                         class="nav-label">树形计算</span></a></li>
+                <li><a href="satisfactory_table.html" target="_blank"
+                       onclick="_czc.push(['_trackEvent', '侧拉栏', '点击', '幸福工厂-层次计算']);"><span
+                        class="nav-label">层次计算</span></a></li>
             </ul>
 
         </div>
