--- a/satisfactory.html
+++ b/satisfactory.html
@@ -100,6 +100,7 @@
                     <div class="ibox" id="productInput">
                         <div class="ibox-title">
                             <h5 id="text_product_target">生产目标</h5>
+                            <span style="color: red;">已更新新的页面，可在侧拉栏中查看。（建议使用，体验更好、功能更全。）</span>
                         </div>
                         <div class="ibox-content" id="productInputContent">
                             <div class="form-group">
